Fixed Home Feed Suggested Accounts alignment
After making posts wider this broke, fixed it while keeping wider posts

--- a/frontend/src/styles/PostProfile.css
+++ b/frontend/src/styles/PostProfile.css
@@ -8,7 +8,7 @@
     border-radius: 2dvh;
     padding: 1dvh;
     margin: 2dvh;
-    width: 80dvh;
+    width: 70dvh;
 
 }
 
